[package]
name = "rustmap-db"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rustmap-db"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "5.5"
wyhash = "0.5"
serde = { version = "1.0" , features = ["derive"] }
bincode = "1.3"
getset = "0.1"
thiserror = "1.0"
rayon = "1.8"
rand = "0.8"
tempfile = "3.8"