[package]
name = "rustmap-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "5.5"
serde = { version = "1.0" , features = ["derive"] }
tokio = { version = "1", features = ["full"] }
bincode = "1.3"
getset = "0.1"
thiserror = "1.0"
rand = "0.8"
tempfile = "3.8"
derive_builder = "0.12"

[dev-dependencies]
criterion = "0.5"
futures = "0.3"

[[bench]]
name = "rustmap_db_bench"
harness = false